<resources>
    <string name="app_name">Track Your Pet!</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="status">STATUS: </string>
    <string name="danPlusID">Dan Iorga - 224277</string>
    <string name="lamPlusID">Lamiita Traista - 220394</string>
    <string name="danjPlusID">Dan Jalba - 224287</string>
    <string name="text1"> Are you a pet owner?</string>
    <string name="text2"> Then this is the best way to keep track of your pet while handling your own duties.</string>
    <string name="text3"> Connect to your pet"s collar right now!</string>
    <string name="text4">    App made by: </string>
    <string name="title_activity_about">AboutActivity</string>
</resources>
