<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
   >
<ImageView
    android:background="@color/white"
    android:layout_width="fill_parent"
    android:layout_height="75dp"
    android:id="@+id/imageView" />

    <TextView
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:id="@+id/textView"
        />

    <TextView
        android:id="@+id/update"
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal|center_vertical"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView">
    </TextView>

    <Button
    android:id="@+id/startbtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/greenb"
    android:text = "@string/start"
        android:textColor="@color/white"
    android:layout_gravity="center"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/stopbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/redb"
        android:text = "@string/stop"
        android:layout_gravity="center"
        android:layout_alignTop="@+id/startbtn"
        android:layout_toEndOf="@+id/startbtn" />

</RelativeLayout>