<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".MainActivity"
    android:background="@drawable/ciinnenebun2"
    android:orientation="vertical"
    >

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/text1"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="25dp"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/text2"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="20dp"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/text3"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="20dp"
        android:gravity="center"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="4.5"/>


    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">
        <TableRow
            android:layout_height="0dp"
            android:layout_weight="0.3">
            <View
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_weight="0.1">
            </View>
            <TextView
                android:text="@string/text4"
                android:background="@android:drawable/screen_background_dark_transparent"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="20dp"

                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="0.2"/>
            <View
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_weight="0.09">

            </View>
        </TableRow>
        <TableRow
            android:layout_height="0dp"
            android:layout_weight="0.3">
            <View
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_weight="0.1">
            </View>
            <TextView
                android:text="@string/danPlusID"
                android:background="@android:drawable/screen_background_dark_transparent"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="20dp"

                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="0.3"/>
            <View
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_weight="0.09">

            </View>
        </TableRow>
        <TableRow
            android:layout_height="0dp"
            android:layout_weight="0.3">
            <View
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_weight="0.1">
            </View>
            <TextView
                android:text="@string/danjPlusID"
                android:background="@android:drawable/screen_background_dark_transparent"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="20dp"

                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="0.6"/>
            <View
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_weight="0.09">

            </View>
        </TableRow>
        <TableRow
            android:layout_height="0dp"
            android:layout_weight="0.3">
            <View
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_weight="0.1">
            </View>
            <TextView
                android:text="@string/lamPlusID"
                android:background="@android:drawable/screen_background_dark_transparent"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="20dp"

                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="0.7"/>
            <View
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_weight="0.09">

            </View>
        </TableRow>
        <TableRow
            android:orientation="horizontal"
            android:layout_height="0dp"
            android:layout_weight="0">
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.5"/>
            <ImageView
                android:id="@+id/backButton"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="0.4"
                android:background="@drawable/back_button"
                android:layout_gravity="center"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.5"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
